@@ -1,3 +1,8 @@
+2002-07-05  Han-Wen  <hanwen@cs.uu.nl>
+
+	* lily-guile.hh: remove guile 1.3 compatibility,  add 1.4
+	compatibility functions.
+
 2002-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* Documentation/windows/lilypond.hint (requires): Add libintl2.
